Slim 4.3 framework version

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
-/vendor
-/.idea
-Homestead.json
-Homestead.yaml
-.env
+.idea/
+.vscode/
+/coverage/
+/vendor/
+/logs/*
+!/logs/README.md
 .phpunit.result.cache
